[build-system]
requires = ["setuptools>=64", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "unsupervised_RL"
dynamic = ["version", "description", "authors", "maintainers", "urls", "keywords"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Isaac Sim :: 2023.1.1",
    "Isaac Sim :: 4.0.0",
]
dependencies = [
    "psutil",
]

[tool.setuptools]
packages = ["unsupervised_RL"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "unsupervised_RL.__version__"}
